<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>archura-router</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>archura-router</name>
	<description>Demo project for Spring Boot with Virtual Threads</description>
	<properties>
		<java.version>19</java.version>
		<compiler.source>19</compiler.source>
		<compiler.target>19</compiler.target>
		<!-- plugin versions -->
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<maven-shade-plugin.version>3.4.0</maven-shade-plugin.version>
		<!-- dependency versions -->
		<jjwt-api.version>0.11.5</jjwt-api.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt-api.version}</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<!-- COMPILER -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${compiler.source}</source>
					<target>${compiler.target}</target>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<!-- NATIVE -->
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
				<configuration>
					<jvmArgs>--enable-preview</jvmArgs>
					<buildArgs>--enable-preview</buildArgs>
				</configuration>
			</plugin>
			<!-- SPRING BOOT -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--enable-preview</jvmArguments>
					<arguments>--enable-preview</arguments>
					<commandlineArguments>--enable-preview</commandlineArguments>
					<compilerArguments>--enable-preview</compilerArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
